--- a/templates/authorinfo.html
+++ b/templates/authorinfo.html
@@ -18,7 +18,7 @@
 
     {% if meta['page_type'] == "index" %}
     <p></p>
-    In addition to writing about Linux; Benjamin is the creator of <a href="https://runbook.io" target="_blank">Runbook</a>, an infrastructure monitoring and automated remediation service. Benjamin is has also recently spoken at SaltConf 2014 where he presented; <a href="https://youtu.be/R1bEEzwYeqk" target="_blank">Using SaltStack in High Availability Environments</a>.
+    In addition to writing about Linux; Benjamin is the creator of <a href="https://automatron.io" target="_blank">Automatron</a>, an infrastructure monitoring and automated remediation application used to create self-healing infrastructure. Benjamin has also spoken at SaltConf 2014 where he presented; <a href="https://youtu.be/R1bEEzwYeqk" target="_blank">Using SaltStack in High Availability Environments</a>.
     {% endif %}
     <hr class="hr">
 
