--- a/templates/blog.html
+++ b/templates/blog.html
@@ -80,7 +80,7 @@
                             <a href="http://amzn.to/1Mdbtkt" class="btn btn-block btn-primary" role="button" target="_blank">Buy on Amazon</a>
                         </div>
                     </div>
-                    <!-- <div class="row scroll">
+                    <div class="row">
                   <h4>Sponsored by</h4>
                     <div class="well">
                       <center>
@@ -93,7 +93,7 @@
                       </div>
                       </center>
                     </div>
-                  </div> -->
+                  </div>
                     <div class="row">
                         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                         <!-- SideBar -->
