--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -1368,8 +1368,11 @@ pre {
   margin: 0 0 10px;
   font-size: 13px;
   line-height: 1.42857143;
+  color: #333;
   word-break: break-all;
   word-wrap: break-word;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
   border-radius: 4px;
   color: #f8f8f2;
 }
