--- a/templates/header.html
+++ b/templates/header.html
@@ -37,7 +37,7 @@
     <meta property="og:site_name" content="{{ meta['site_name'] }}"/>
 
     <!-- Bootstrap Core CSS -->
-    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/css/bootstrap2.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="/static/css/clean-blog.css" rel="stylesheet">
