--- a/static/css/bootstrap2.css
+++ b/static/css/bootstrap2.css
@@ -1368,11 +1368,10 @@ pre {
   margin: 0 0 10px;
   font-size: 13px;
   line-height: 1.42857143;
-  color: #333;
+  color: #f8f8f2;
+  background-color: #272822;
   word-break: break-all;
   word-wrap: break-word;
-  background-color: #f5f5f5;
-  border: 1px solid #ccc;
   border-radius: 4px;
 }
 pre code {
@@ -1380,7 +1379,7 @@ pre code {
   font-size: inherit;
   color: inherit;
   white-space: pre-wrap;
-  background-color: transparent;
+  background-color: inherit;
   border-radius: 0;
 }
 .pre-scrollable {
