Fixing book and datadog info

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -75,8 +75,8 @@
                             </div>
                             <p>Identify, capture and resolve common issues faced by Red Hat Enterprise Linux administrators using best practices and advanced troubleshooting techniques</p>
                             <h5>What people are saying:</h5>
-                            <blockquote>Red Hat Enterprise Linux Troubleshooting Guide may just be all you need in your quest to wear the red hat. - Perry N.</blockquote>
-                            <a href="http://amzn.to/1Mdbtkt" class="btn btn-block btn-primary" role="button" target="_blank">Buy on Amazon</a>
+                            <blockquote>Excellent, excellent resource for practical guidance on how to troubleshoot a wide variety of problems on Red Hat Linux. I particularly enjoyed how the author made sure to provide solid background and practical examples. I have a lot of experience on Red Hat but still came away with some great practical tools to add to my toolkit. - Amazon Review</blockquote>
+                            <a href="http://amzn.to/1mdbtkt" class="btn btn-block btn-primary" role="button" target="_blank">Paperback</a> <a href="http://a.co/iMyyw4e" class="btn btn-block btn-primary" role="button" target="_blank">Kindle</a> <a href="https://www.safaribooksonline.com/library/view/red-hat-enterprise/9781785283550/" class="btn btn-block btn-primary" role="button" target="_blank">Safari Books</a>
                         </div>
                     </div>
                     <div class="row">
@@ -84,7 +84,7 @@
                     <div class="well">
                       <center>
                       <div class="row">
-                      <a href="https://www.datadoghq.com/lpg/?utm_source=Advertisement&utm_medium=Advertisement&utm_campaign=Bencane"><img src="/static/img/datadog-300x250.png" border=0></a>
+                      <a href="https://www.datadoghq.com/lpg/?utm_source=Advertisement&utm_medium=Advertisement&utm_campaign=Bencane"><img src="/static/img/datadog-300x250-2.png" border=0></a>
                       </div>
                       <hr class="hr">
                       <div class="row">
