--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
 		            <h2>Latest Articles</h2>
                 {% set seq_num = 0 %}
                 {% for key in meta['post_ids']|reverse %}
-                {% if seq_num <= 8 %}
+                {% if seq_num <= 5 %}
                 <div class="post-preview">
                     <a href="{{ data[key]['full_url'] }}">
                         <h3 class="post-title">
@@ -52,13 +52,11 @@
               <div class="well">
                  <a href="http://amzn.com/1785283553" target="_blank"><h3>Red Hat Enterprise Linux Troubleshooting Guide</h3></a>
                   <center><a href="http://amzn.com/1785283553" target="_blank"><img src="/static/img/RHELTroubleshootingCover.jpg" class="img-responsive" border=0/></a></center>
-<p>
-In this book, you begin with simple troubleshooting best practices and get an overview of the Linux commands used for troubleshooting. The book will cover the troubleshooting methods for web applications and services such as Apache and MySQL. Then, you will learn to identify system performance bottlenecks and troubleshoot network issues; all while learning about vital troubleshooting steps such as understanding the problem statement, establishing a hypothesis, and understanding trial, error, and documentation. Next, the book will show you how to capture and analyze network traffic, use advanced system troubleshooting tools such as strace, tcpdump & dmesg, and discover common issues with system defaults.
-</p><p>
-Finally, the book will take you through a detailed root cause analysis of an unexpected reboot where you will learn
-to recover after an unexpected system failure.</p>
+  <p>Identify, capture and resolve common issues faced by Red Hat Enterprise Linux administrators using best practices and advanced troubleshooting techniques</p>
+  <h5>What people are saying:</h5>
+  <blockquote>Excellent, excellent resource for practical guidance on how to troubleshoot a wide variety of problems on Red Hat Linux. I particularly enjoyed how the author made sure to provide solid background and practical examples. I have a lot of experience on Red Hat but still came away with some great practical tools to add to my toolkit. - Amazon Review</blockquote>
 
-                 <a href="http://amzn.to/1Mdbtkt" class="btn btn-block btn-primary" role="button" target="_blank">Purchase this book</a>
+                 <a href="http://amzn.to/1mdbtkt" class="btn btn-block btn-primary" role="button" target="_blank">Paperback</a> <a href="http://a.co/iMyyw4e" class="btn btn-block btn-primary" role="button" target="_blank">Kindle</a> <a href="https://www.safaribooksonline.com/library/view/red-hat-enterprise/9781785283550/" class="btn btn-block btn-primary" role="button" target="_blank">Safari Books</a>
               </div>
             </div>
         </div>
