Fixing book links

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -64,19 +64,18 @@
                         <h4>Publications</h4>
                         <div class="well">
                             <div class="row">
-                                <div class="col-md-4">
+                                <div class="col-md-6">
                                     <center>
                                         <a href="http://amzn.com/1785283553" target="_blank"><img src="/static/img/RHELTroubleshootingCover.jpg" class="img-thumbnail img-responsive" border=0/></a>
                                     </center>
                                 </div>
-                                <div class="col-md-8">
-                                    <a href="http://amzn.com/1785283553" target="_blank"><h4>Red Hat Enterprise Linux Troubleshooting Guide</h4></a>
+                                <div class="col-md-6">
+                                    <a href="https://www.amazon.com/dp/1785283553/" class="btn btn-block btn-primary" role="button" target="_blank">Paperback</a> <a href="https://www.amazon.com/Red-Enterprise-Linux-Troubleshooting-Guide-ebook/dp/B016OQOOAK" class="btn btn-block btn-primary" role="button" target="_blank">Kindle</a> <a href="https://www.safaribooksonline.com/library/view/red-hat-enterprise/9781785283550/" class="btn btn-block btn-primary" role="button" target="_blank">Safari Books</a>
                                 </div>
                             </div>
                             <p>Identify, capture and resolve common issues faced by Red Hat Enterprise Linux administrators using best practices and advanced troubleshooting techniques</p>
                             <h5>What people are saying:</h5>
                             <blockquote>Excellent, excellent resource for practical guidance on how to troubleshoot a wide variety of problems on Red Hat Linux. I particularly enjoyed how the author made sure to provide solid background and practical examples. I have a lot of experience on Red Hat but still came away with some great practical tools to add to my toolkit. - Amazon Review</blockquote>
-                            <a href="http://amzn.to/1mdbtkt" class="btn btn-block btn-primary" role="button" target="_blank">Paperback</a> <a href="http://a.co/iMyyw4e" class="btn btn-block btn-primary" role="button" target="_blank">Kindle</a> <a href="https://www.safaribooksonline.com/library/view/red-hat-enterprise/9781785283550/" class="btn btn-block btn-primary" role="button" target="_blank">Safari Books</a>
                         </div>
                     </div>
                     <div class="row">
