--- a/static/css/clean-blog2.css
+++ b/static/css/clean-blog2.css
@@ -34,10 +34,10 @@ a:focus {
 }
 a img:hover,
 a img:focus {
-  cursor: zoom-in;
+  /* cursor: zoom-in; */
 }
 blockquote {
-  /* color: #808080; */ 
+  /* color: #808080; */
   font-style: italic;
 }
 hr.small {
