Fixing shell colors and shareaholic

--- a/templates/shareaholic.html
+++ b/templates/shareaholic.html
@@ -1,5 +1,2 @@
-{% if data['pagetype'] == "article" %}
 <!-- shareaholic -->
-<a id="share"></a>
-<div class='shareaholic-canvas' data-app='share_buttons' data-app-id='632299'></div>
-{% endif %}
+<div class="shareaholic-canvas" data-app="share_buttons" data-app-id="632299"></div>
