--- a/static/css/bootstrap2.css
+++ b/static/css/bootstrap2.css
@@ -1368,7 +1368,7 @@ pre {
   margin: 0 0 10px;
   font-size: 13px;
   line-height: 1.42857143;
-  color: #f8f8f2;
+  color: #e3e3e3;
   background-color: #272822;
   word-break: break-all;
   word-wrap: break-word;
