Revamping and refreshing design

--- a/templates/authorinfo.html
+++ b/templates/authorinfo.html
@@ -14,12 +14,9 @@
     <p></p>
     <div class="well">
     {% endif %}
-    Benjamin is a Systems Architect working in the financial services industry focused on platforms that require Continuous Availability. He has been working with Linux and Unix for over 10 years now and has recently published his first book; <a href="http://amzn.com/1785283553" target="_blank">Red Hat Enterprise Linux Troubleshooting Guide</a>.
-
-    {% if meta['page_type'] == "index" %}
-    <p></p>
-    In addition to writing about Linux; Benjamin is the creator of <a href="https://automatron.io" target="_blank">Automatron</a>, an infrastructure monitoring and automated remediation application used to create self-healing infrastructure. Benjamin has also spoken at SaltConf 2014 where he presented; <a href="https://youtu.be/R1bEEzwYeqk" target="_blank">Using SaltStack in High Availability Environments</a>.
-    {% endif %}
+Benjamin's specialty is keeping the lights on for mission critical systems. He is currently building applications that enable high concurrency financial transactions.
+<p>Recently Benjamin published his first book; <a href="http://amzn.com/1785283553" target="_blank">Red Hat Enterprise Linux Troubleshooting Guide</a>.
+In addition to writing, he has several Open Source projects focused on making Ops easier. These projects include <a href="https://automatron.io" target="_blank">Automatron</a>, a project enabling  auto-healing infrastructure for the masses.</p>
     <hr class="hr">
 
                     <ul class="list-inline text-center">
@@ -36,14 +33,6 @@
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://angel.co/madflojo"> 
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-angellist fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
