--- a/templates/403.html
+++ b/templates/403.html
@@ -24,31 +24,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
-  <div class="alert alert-danger" role="alert"><b>403 Access Forbidden!</b> Checkout some of the other articles instead</div>
- 	<div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title">The Archives</h3>
-        </div>
-        <table class="table table-striped table-hover">
-          <tbody>
-
-          
-          {% for item in meta['post_ids']|reverse %}
-          <tr>
-            <td>
-            {% if data[item]['popularity'] == True %}
-            <span class="label label-info pull-right">Popular</span>
-            {% endif %}
-            <h3><a href="{{ data[item]['full_url'] }}">{{ data[item]['title'] }}</a></h3>
-                <small class="text-muted">Published on: {{ data[item]['date'] }}</small>
-                <p class="text-default">{{ data[item]['description'] }}</p>
-            </td>
-          </tr>
-          {% endfor %}
-
-          </tbody>
-        </table>
-	</div>
+  <div class="alert alert-danger" role="alert"><b>403 Access Forbidden!</b> Checkout some of the other <a href="/archive.html">articles</a> instead</div>
             </div>
         </div>
     </div>
@@ -60,8 +36,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-		    {% include 'shareaholic.html' %}
-                    <p class="copyright text-muted">Copyright &copy; Benjamin Cane 2014 - <a href="mailto:ben@bencane.com">Contact the Author</a></p>
                 </div>
             </div>
         </div>
