--- a/templates/archive.html
+++ b/templates/archive.html
@@ -12,8 +12,8 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="page-heading">
-                        <h1>Archive</h1>
-                        <span class="subheading">A collection of Linux Systems Administration articles</span>
+                        <h1>Articles</h1>
+                        <span class="subheading">A collection of articles by Benjamin Cane</span> 
                     </div>
                 </div>
             </div>
@@ -26,25 +26,27 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
  	<div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title">The Archives</h3>
+          <h3 class="panel-title">Articles</h3>
         </div>
         <table class="table table-striped table-hover">
           <tbody>
-
-
-          {% for item in meta['post_ids']|reverse %}
+          {%- for item in meta['post_ids']|reverse -%}
           <tr>
             <td>
-            {% if data[item]['popularity'] == True %}
-            <span class="label label-info pull-right">Popular</span>
-            {% endif %}
-            <h3><a href="{{ data[item]['full_url'] }}">{{ data[item]['title'] }}</a></h3>
-                <small class="text-muted">Published on: {{ data[item]['date'] }} | {{data[item]['read_time']}} min read</small>
+            {%- if "external" in data[item] -%}
+            <span class="label label-default pull-right">{{ data[item]["publisher"] }}</span>
+            <h3><a href="{{ data[item]['remote_url'] }}">{{ data[item]['title'] }}</a></h3>
+                <small class="text-muted">Published on: {{ data[item]['date'].strftime("%Y-%m-%d") }} | {{data[item]['read_time']}} min read</small>
                 <p class="text-default">{{ data[item]['description'] }}</p>
+            {%- else -%}
+            <span class="label label-default pull-right">{{ data[item]["publisher"] }}</span>
+            <h3><a href="{{ data[item]['full_url'] }}">{{ data[item]['title'] }}</a></h3>
+                <small class="text-muted">Published on: {{ data[item]['date'].strftime("%Y-%m-%d") }} | {{data[item]['read_time']}} min read</small>
+                <p class="text-default">{{ data[item]['description'] }}</p>
+            {%- endif -%}
             </td>
           </tr>
-          {% endfor %}
-
+          {%- endfor -%}
           </tbody>
         </table>
 	</div>
@@ -59,7 +61,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <p class="copyright text-muted">Copyright &copy; Benjamin Cane 2014 - <a href="mailto:ben@bencane.com">Contact the Author</a></p>
+                    <p class="copyright text-muted">Copyright &copy; Benjamin Cane 2017 | <i class="fa fa-twitter"></i> <a href="https://twitter.com/madflojo">Twitter</a> | <i class="fa fa-rss"></i> <a href="{{ meta['site_feed'] }}">RSS</a> | <i class="fa fa-envelope"></i> <a href="http://bencane.us7.list-manage1.com/subscribe?u=52bad2a14ba3306a494c9739f&id=848cc53f28">Mail Feed</a></p>
                 </div>
             </div>
         </div>
