--- a/templates/index.html
+++ b/templates/index.html
@@ -28,36 +28,65 @@
 		{% include 'authorinfo.html' %}
 	    <hr>
             <div class="col-lg-8 col-md-8">
-		            <h2>Latest Articles</h2>
-                {% set seq_num = 0 %}
-                {% for key in meta['post_ids']|reverse %}
-                {% if seq_num <= 5 %}
-                <div class="post-preview">
-                    <a href="{{ data[key]['full_url'] }}">
-                        <h3 class="post-title">
-			    {{ data[key]['title'] }}
-                        </h3>
-                        <h4 class="post-subtitle">
-			    {{ data[key]['description'] }}
-                        </h4>
-                    </a>
-                    <p class="post-meta">Written by <a href="https://twitter.com/madflojo">Benjamin Cane</a> at {{ data[key]['date'] }}</p>
-                </div>
-                {% endif %}
-                {% set seq_num = seq_num + 1 %}
-                {% endfor %}
+        <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Articles</h3>
+        </div>
+        <table class="table table-striped table-hover">
+          <tbody>
+
+          {% for item in meta['front_ids']|reverse %}
+          <tr>
+            <td>
+            {% if "external" in data[item] %}
+            <span class="label label-default pull-right">{{ data[item]["publisher"] }}</span>
+            <h3><a href="{{ data[item]['remote_url'] }}">{{ data[item]['title'] }}</a></h3>
+                <small class="text-muted">Published on: {{ data[item]['date'].strftime("%Y-%m-%d") }} | {{data[item]['read_time']}} min read</small>
+            {% else %}
+            <span class="label label-default pull-right">{{ data[item]["publisher"] }}</span>
+            <h3><a href="{{ data[item]['full_url'] }}">{{ data[item]['title'] }}</a></h3>
+                <small class="text-muted">Published on: {{ data[item]['date'].strftime("%Y-%m-%d") }} | {{data[item]['read_time']}} min read</small>
+            {% endif %}
+            </td>
+          </tr>
+          {% endfor %}
+
+          <tr><td><center><a href="/archive.html">More Articles</a></center></td></tr>
+          </tbody>
+        </table>
+        </div>
+
             </div>
             <div class="col-lg-4 col-md-4">
-              <h2>Books I've Written</h2>
-              <div class="well">
+        <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Projects</h3>
+        </div>
+          <div class="list-group">
+            <a href="https://github.com/madflojo/automatron" class="list-group-item">
+            <h4 class="list-group-item-header">Automatron</h4>
+            <p class="list-group-item-text">Infrastructure monitoring framework turning DevOps runbooks into automated actions</p>
+            </a>
+            <a href="https://github.com/madflojo/cfdns" class="list-group-item">
+            <h4 class="list-group-item-header">cfdns</h4>
+            <p class="list-group-item-text">Command line tool for manipulating DNS of CloudFlare hosted domains</p>
+            </a>
+          </div>
+        </div>
+        <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Books</h3>
+        </div>
+              <div class="panel-body">
                  <a href="https://www.amazon.com/dp/1785283553/3" target="_blank"><h3>Red Hat Enterprise Linux Troubleshooting Guide</h3></a>
                   <center><a href="https://www.amazon.com/dp/1785283553/" target="_blank"><img src="/static/img/RHELTroubleshootingCover.jpg" class="img-responsive" border=0/></a></center>
   <p>Identify, capture and resolve common issues faced by Red Hat Enterprise Linux administrators using best practices and advanced troubleshooting techniques</p>
   <h5>What people are saying:</h5>
   <blockquote>Excellent, excellent resource for practical guidance on how to troubleshoot a wide variety of problems on Red Hat Linux. I particularly enjoyed how the author made sure to provide solid background and practical examples. I have a lot of experience on Red Hat but still came away with some great practical tools to add to my toolkit. - Amazon Review</blockquote>
 
-                 <a href="https://www.amazon.com/dp/1785283553/" class="btn btn-block btn-primary" role="button" target="_blank">Paperback</a> <a href="https://www.amazon.com/Red-Enterprise-Linux-Troubleshooting-Guide-ebook/dp/B016OQOOAK" class="btn btn-block btn-primary" role="button" target="_blank">Kindle</a> <a href="https://www.safaribooksonline.com/library/view/red-hat-enterprise/9781785283550/" class="btn btn-block btn-primary" role="button" target="_blank">Safari Books</a>
+                 <a href="https://www.amazon.com/dp/1785283553/" class="btn btn-block btn-primary" role="button" target="_blank">Paperback</a> <a href="https://www.amazon.com/Red-Enterprise-Linux-Troubleshooting-Guide-ebook/dp/B016OQOOAK" class="btn btn-block btn-primary" role="button" target="_blank">Kindle</a>
               </div>
+            </div>
             </div>
         </div>
     </div>
@@ -69,7 +98,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <p class="copyright text-muted">Copyright &copy; Benjamin Cane 2014 - <a href="mailto:ben@bencane.com">Contact the Author</a></p>
+                    <p class="copyright text-muted">Copyright &copy; Benjamin Cane 2017 | <i class="fa fa-twitter"></i> <a href="https://twitter.com/madflojo">Twitter</a> | <i class="fa fa-rss"></i> <a href="{{ meta['site_feed'] }}">RSS</a> | <i class="fa fa-envelope"></i> <a href="http://bencane.us7.list-manage1.com/subscribe?u=52bad2a14ba3306a494c9739f&id=848cc53f28">Mail Feed</a></p>
                 </div>
             </div>
         </div>
