--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,18 +19,11 @@
                         <a href="/"><i class="fa fa-home"></i> Home</a>
                     </li>
                     <li>
-                        <a href="/archive.html"><i class="fa fa-archive"></i> Archive</a>
-                    </li>
-		                <li class="divider"></li>
-                    <li>
-                        <a href="{{ meta['site_feed'] }}"><i class="fa fa-rss"></i> RSS</a>
+                        <a href="/archive.html"><i class="fa fa-archive"></i> Articles</a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/madflojo"><i class="fa fa-twitter"></i> Twitter</a>
+                        <a href="https://github.com/madflojo"><i class="fa fa-github"></i> Projects</a>
                     </li>
-		                <li>
-			                  <a href="http://bencane.us7.list-manage1.com/subscribe?u=52bad2a14ba3306a494c9739f&id=848cc53f28"><i class="fa fa-envelope"></i> Mail Feed</a>
-		                </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
