Fixing minor things

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://bencane.com">Benjamin Cane</a>
+                <a class="navbar-brand" href="https://bencane.com">Benjamin Cane</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
