--- a/templates/index.html
+++ b/templates/index.html
@@ -67,6 +67,10 @@
             <h4 class="list-group-item-header">Automatron</h4>
             <p class="list-group-item-text">Infrastructure monitoring framework turning DevOps runbooks into automated actions</p>
             </a>
+            <a href="https://github.com/madflojo/efs2" class="list-group-item">
+            <h4 class="list-group-item-header">Effing Shell Scripts 2</h4>
+            <p class="list-group-item-text">A common sense remote command execution tool inspired by fss, written in Go</p>
+            </a>
             <a href="https://github.com/madflojo/cfdns" class="list-group-item">
             <h4 class="list-group-item-header">cfdns</h4>
             <p class="list-group-item-text">Command line tool for manipulating DNS of CloudFlare hosted domains</p>
