Adding top of page ad

--- a/bencane/themes/academic/layouts/_default/single.html
+++ b/bencane/themes/academic/layouts/_default/single.html
@@ -11,6 +11,17 @@
     {{ partial "article_metadata" (dict "content" . "is_list" 0) }}
 
     <div class="article-style" itemprop="articleBody">
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+			<!-- Top of Page -->
+			<ins class="adsbygoogle"
+			     style="display:block"
+			     data-ad-client="ca-pub-0946238287085890"
+			     data-ad-slot="5617960684"
+			     data-ad-format="auto"
+			     data-full-width-responsive="true"></ins>
+			<script>
+			(adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
       {{ .Content }}
     </div>
 
