--- a/bencane/themes/academic/layouts/publication/single.html
+++ b/bencane/themes/academic/layouts/publication/single.html
@@ -11,6 +11,7 @@
     <p class="pub-abstract">{{ .Params.abstract | markdownify }}</p>
     {{ end }}
 
+<!--
     {{ if (.Params.publication_types) and (ne (index .Params.publication_types 0) "0") }}
     <div class="row">
       <div class="col-md-1"></div>
@@ -31,8 +32,8 @@
     </div>
     <div class="d-md-none space-below"></div>
     {{ end }}
-
-    {{ if .Params.publication }}
+-->
+<!--    {{ if .Params.publication }}
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-10">
@@ -45,6 +46,7 @@
     </div>
     <div class="d-md-none space-below"></div>
     {{ end }}
+-->
 
     <div class="space-below"></div>
 
