Adding Go Interfaces article

--- a/bencane/themes/hugo-PaperMod/layouts/partials/head.html
+++ b/bencane/themes/hugo-PaperMod/layouts/partials/head.html
@@ -47,7 +47,7 @@
 <link rel="{{ .Rel }}" type="{{ .MediaType.Type }}" href="{{ .Permalink | safeURL }}">
 {{ end -}}
 <!--Ads-->
-<script data-ad-client="ca-pub-0946238287085890" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- <script data-ad-client="ca-pub-0946238287085890" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ES58R18XYQ"></script>
 <script>
